feat: updated swagger-app to get the right data from the login-part endpoints
